update the security file